--- a/budaya.html
+++ b/budaya.html
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
 	<head>
 		<title>Hakka Indonesia</title>
 		<link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -121,44 +121,44 @@
       </div>
     </div>
     <div class="container_12" style="margin-top: 100px;padding-left: 100px">
-      <div class="grid_4 prefix_2" style="cursor: pointer;" onclick="showImage('assets/images/tentang/IMG_7606.jpg')">
+      <div class="grid_4 prefix_2" style="cursor: pointer;" onclick="showImage('assets/images/tentang/IMG_7606.JPG')">
         <img src="assets/images/tentang/baksogoreng.png" style="width: 100%;height:150px;margin-bottom: 10px;">
       </div>
-      <div class="grid_2" style="cursor: pointer;" onclick="showImage('assets/images/tentang/IMG_7608.jpg')">
+      <div class="grid_2" style="cursor: pointer;" onclick="showImage('assets/images/tentang/IMG_7608.JPG')">
         <img src="assets/images/tentang/baksobabi.png" style="width: 100%;height:150px;margin-bottom: 10px;">
       </div>
-      <div class="grid_2" style="cursor: pointer;" onclick="showImage('assets/images/tentang/IMG_7609.jpg')">
+      <div class="grid_2" style="cursor: pointer;" onclick="showImage('assets/images/tentang/IMG_7609.JPG')">
         <img src="assets/images/tentang/bakmiyam.png" style="width: 100%;height:150px;margin-bottom: 10px;">
       </div>
-      <div class="grid_4 suffix_2" style="cursor: pointer;" onclick="showImage('assets/images/tentang/IMG_7604.jpg')">
+      <div class="grid_4 suffix_2" style="cursor: pointer;" onclick="showImage('assets/images/tentang/IMG_7604.JPG')">
         <img src="assets/images/tentang/ayamsamcan.png" style="width: 100%;height:150px;margin-bottom: 10px;">
       </div>
     </div>
     <div class="container_12" style="margin-top: 20px;padding-left: 100px">
-      <div class="grid_4 prefix_2" style="cursor: pointer;" onclick="showImage('assets/images/tentang/IMG_7610.jpg')">
+      <div class="grid_4 prefix_2" style="cursor: pointer;" onclick="showImage('assets/images/tentang/IMG_7610.JPG')">
         <img src="assets/images/tentang/lophoyen.png" style="width: 100%;height:150px;margin-bottom: 10px;">
       </div>
-      <div class="grid_2" style="cursor: pointer;" onclick="showImage('assets/images/tentang/IMG_7602.jpg')">
+      <div class="grid_2" style="cursor: pointer;" onclick="showImage('assets/images/tentang/IMG_7602.JPG')">
         <img src="assets/images/tentang/locupan.png" style="width: 100%;height:150px;margin-bottom: 10px;">
       </div>
-      <div class="grid_2" style="cursor: pointer;" onclick="showImage('assets/images/tentang/IMG_7600.jpg')">
+      <div class="grid_2" style="cursor: pointer;" onclick="showImage('assets/images/tentang/IMG_7600.JPG')">
         <img src="assets/images/tentang/niongkukua.png" style="width: 100%;height:150px;margin-bottom: 10px;">
       </div>
-      <div class="grid_4 suffix_2" style="cursor: pointer;" onclick="showImage('assets/images/tentang/IMG_7598.jpg')">
+      <div class="grid_4 suffix_2" style="cursor: pointer;" onclick="showImage('assets/images/tentang/IMG_7598.JPG')">
         <img src="assets/images/tentang/yongtaofu.png" style="width: 100%;height:150px;margin-bottom: 10px;">
       </div>
     </div>
     <div class="container_12" style="margin-top: 20px;margin-bottom: 100px;padding-left: 100px">
-      <div class="grid_4 prefix_2" style="cursor: pointer;" onclick="showImage('assets/images/tentang/IMG_7599.jpg')">
+      <div class="grid_4 prefix_2" style="cursor: pointer;" onclick="showImage('assets/images/tentang/IMG_7599.JPG')">
         <img src="assets/images/tentang/ayamgaram.png" style="width: 100%;height:150px;margin-bottom: 10px;">
       </div>
-      <div class="grid_2" style="cursor: pointer;" onclick="showImage('assets/images/tentang/IMG_7607.jpg')">
+      <div class="grid_2" style="cursor: pointer;" onclick="showImage('assets/images/tentang/IMG_7607.JPG')">
         <img src="assets/images/tentang/guilinggao.png" style="width: 100%;height:150px;margin-bottom: 10px;">
       </div>
-      <div class="grid_2" style="cursor: pointer;" onclick="showImage('assets/images/tentang/IMG_7605.jpg')">
+      <div class="grid_2" style="cursor: pointer;" onclick="showImage('assets/images/tentang/IMG_7605.JPGg')">
         <img src="assets/images/tentang/daingmerah.png" style="width: 100%;height:150px;margin-bottom: 10px;">
       </div>
-      <div class="grid_4 suffix_2" style="cursor: pointer;" onclick="showImage('assets/images/tentang/IMG_7603.jpg')">
+      <div class="grid_4 suffix_2" style="cursor: pointer;" onclick="showImage('assets/images/tentang/IMG_7603.JPG')">
         <img src="assets/images/tentang/ayamangcaw.png" style="width: 100%;height:150px;margin-bottom: 10px;">
       </div>
     </div>
